[gd_scene load_steps=14 format=3 uid="uid://ble7mor3c1qc2"]

[ext_resource type="Script" path="res://select_player.gd" id="1_isn1n"]
[ext_resource type="Texture2D" uid="uid://bsvx4cfroj3e3" path="res://assets/images/menus/background.png" id="2_e3tvr"]
[ext_resource type="Theme" uid="uid://cdydlki1v17ye" path="res://resources/default.tres" id="2_jfrj5"]
[ext_resource type="Texture2D" uid="uid://xsne8i7q2rnm" path="res://assets/sprites/GUI/Menu/arrowBeige_left.png" id="3_iyuik"]
[ext_resource type="Texture2D" uid="uid://cgbuyssm2fdqa" path="res://assets/sprites/characters/male.png" id="3_qff3o"]
[ext_resource type="Texture2D" uid="uid://7om41h3ddi1" path="res://assets/sprites/GUI/Menu/arrowBrown_left.png" id="4_r5j14"]
[ext_resource type="Texture2D" uid="uid://b7svt5nm7ddm3" path="res://assets/sprites/GUI/Menu/arrowBeige_right.png" id="6_11soq"]
[ext_resource type="Texture2D" uid="uid://bnyci5a7dchco" path="res://assets/sprites/GUI/Menu/arrowBrown_right.png" id="7_ut0nd"]
[ext_resource type="Texture2D" uid="uid://cmvny2setc6tt" path="res://assets/sprites/GUI/Menu/buttonLong_beige.png" id="8_4jnx8"]
[ext_resource type="Texture2D" uid="uid://cfpbw1atnpp3o" path="res://assets/sprites/GUI/Menu/buttonLong_beige_pressed.png" id="9_u3isr"]
[ext_resource type="Texture2D" uid="uid://bk1kcj7lalxxf" path="res://assets/sprites/GUI/Menu/buttonLong_brown.png" id="10_nrh7a"]
[ext_resource type="AudioStream" uid="uid://bsly7x3obr5m7" path="res://assets/audios/sfx/ui/main_menu_button.ogg" id="12_20a6v"]
[ext_resource type="PackedScene" uid="uid://b06nk681k1ij7" path="res://scenes/menus/transition.tscn" id="13_8nsoe"]

[node name="SelectPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_isn1n")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.843137)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e3tvr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="CharacterLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_jfrj5")
theme_override_font_sizes/font_size = 48
text = "MASCULINO"
horizontal_alignment = 1

[node name="CharacterSelector" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 80
alignment = 1

[node name="Right" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/CharacterSelector"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_iyuik")
texture_hover = ExtResource("4_r5j14")
stretch_mode = 0

[node name="CharacterTexture" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/CharacterSelector"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("3_qff3o")
expand_mode = 1

[node name="Left" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/CharacterSelector"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_11soq")
texture_hover = ExtResource("7_ut0nd")
stretch_mode = 0

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_jfrj5")
theme_override_font_sizes/font_size = 24
text = "Digite seu nome:"

[node name="PlayerNameInput" type="LineEdit" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_jfrj5")
text = "Player"
placeholder_text = "Digite seu nome"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SelectedButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 160)
layout_mode = 2
texture_normal = ExtResource("8_4jnx8")
texture_pressed = ExtResource("9_u3isr")
texture_hover = ExtResource("10_nrh7a")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/SelectedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jfrj5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Confirmar"

[node name="ButtonSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_20a6v")

[node name="Transition" parent="." instance=ExtResource("13_8nsoe")]

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/CharacterSelector/Right" to="." method="toggle_type"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/CharacterSelector/Left" to="." method="toggle_type"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/SelectedButton" to="." method="_on_selected_button_pressed"]
